[gd_scene load_steps=25 format=4 uid="uid://61fo0pjt6jia"]

[ext_resource type="Texture2D" uid="uid://dx5oj1tdqdsia" path="res://art/kenney ui assets/PNG/Grey/Default/bar_square_gloss_small.png" id="1_1hof7"]
[ext_resource type="Script" path="res://scripts/solarpanelminigame.gd" id="1_743iq"]
[ext_resource type="Texture2D" uid="uid://4t58p5wmf3xg" path="res://art/tilesets/minigame_window.png" id="1_ahobo"]
[ext_resource type="Texture2D" uid="uid://ca3i6mi0omyy4" path="res://art/tilesets/selenia_ground.png" id="2_rlrtx"]
[ext_resource type="Texture2D" uid="uid://ck7tu6rfv2h3x" path="res://art/tilesets/solarpanel.png" id="3_wgwls"]
[ext_resource type="Texture2D" uid="uid://y5s6ijaeafgd" path="res://art/keybord and controller icons/individual sprites/keyboard/Right Arrow.png" id="4_7yitv"]
[ext_resource type="Texture2D" uid="uid://bf2sd2x0bis6i" path="res://art/keybord and controller icons/individual sprites/keyboard/1.png" id="6_jpld3"]
[ext_resource type="Texture2D" uid="uid://q65rb1o0nj7y" path="res://art/keybord and controller icons/individual sprites/controller/controller button 55.png" id="7_meudt"]
[ext_resource type="Texture2D" uid="uid://du1xjpqa84i6c" path="res://art/keybord and controller icons/individual sprites/keyboard/2.png" id="7_t0gal"]
[ext_resource type="Texture2D" uid="uid://c1s8ssrxgqfty" path="res://art/keybord and controller icons/individual sprites/keyboard/3.png" id="8_a4try"]
[ext_resource type="Texture2D" uid="uid://dansjm4ojc0ay" path="res://art/keybord and controller icons/individual sprites/keyboard/4.png" id="9_503rr"]
[ext_resource type="Texture2D" uid="uid://dl7vh2udhfx10" path="res://art/keybord and controller icons/individual sprites/keyboard/5.png" id="10_ekjin"]
[ext_resource type="Texture2D" uid="uid://cysnoh30ajq8o" path="res://art/keybord and controller icons/individual sprites/keyboard/6.png" id="11_yrh4q"]
[ext_resource type="Texture2D" uid="uid://cflv6ern6fmer" path="res://art/keybord and controller icons/individual sprites/keyboard/7.png" id="12_3tiyt"]
[ext_resource type="Texture2D" uid="uid://cb0r51y8g1gmp" path="res://art/keybord and controller icons/individual sprites/keyboard/8.png" id="13_hxfnc"]
[ext_resource type="Texture2D" uid="uid://cdjknxoilpnbt" path="res://art/keybord and controller icons/individual sprites/keyboard/9.png" id="14_xwasy"]
[ext_resource type="Texture2D" uid="uid://dnjiterejibou" path="res://art/keybord and controller icons/individual sprites/keyboard/O.png" id="15_1t7v2"]
[ext_resource type="Texture2D" uid="uid://b2f3tud82ufu3" path="res://art/keybord and controller icons/individual sprites/controller/controller button 27.png" id="16_jis1j"]
[ext_resource type="Texture2D" uid="uid://bynk1yo8tqrld" path="res://art/keybord and controller icons/individual sprites/controller/controller button 26.png" id="17_cbn4a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t440s"]
texture = ExtResource("1_ahobo")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vu72a"]
texture = ExtResource("2_rlrtx")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -4.5625, 8, -4.1875, -4.125, 4.3125, -4.375, 3.8125, 8, 8, 8, 8, -8, -8, -8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -4.125, -4.375, -4.125, -4.75, 8, -8, 8, -8, -8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -4.125, -8, -4.4375, -8, -8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, 4.125, 8, 4.125, -4.375, -8, -4.75, -8, -8, 8, -8)
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.375, -8, -8, -8, -8, 8, -4.25, 8)
0:1/0/physics_layer_0/polygon_1/points = PackedVector2Array(3.875, -8, 8, -8, 8, 8, 3.875, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4.125, -8, -3.75, 8, -8, 8)
2:1/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, 3.4375, 8, 3.9375, -8, 8, -8)
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4.5625, -8, -4.4375, 4.5, 4.3125, 4.375, 3.8125, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4.125, -8, -4.125, 4.375, 8, 4.75, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, 4.125, 8, 3.75, 8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, 4.125, 4.375, 4.125, 4.75, -8, 8, -8, 8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.5625, -8, -8, -8, -8, 8, -3.9375, 8)
0:3/0/physics_layer_0/polygon_1/points = PackedVector2Array(3.875, -8, 8, -8, 8, 8, 3.875, 8)
0:3/0/physics_layer_0/polygon_2/points = PackedVector2Array(-3.4375, -6.375, 3.5625, -6.5, 3.4375, -8, -3.8125, -8)
0:3/0/physics_layer_0/polygon_3/points = PackedVector2Array(3.8125, 5.125, 3.4375, 8, -3.3125, 8, -3.6875, 5.25)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -4.5625, -4.5, -4.4375, -4.375, 4.3125, 8, 3.8125, 8, 8, -8, 8, -8, -8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4.375, -8, 8, 8, 8, 8, 4.25)
2:3/0/physics_layer_0/polygon_1/points = PackedVector2Array(-8, -3.875, -8, -8, 8, -8, 8, -3.875)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, -4.5625, 4.5, -4.4375, 4.375, 4.3125, -8, 4.375, -8, 8, 8, 8, 8, -8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)

[sub_resource type="TileSet" id="TileSet_21oty"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 2
sources/1 = SubResource("TileSetAtlasSource_vu72a")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5eq4a"]
size = Vector2(23, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_5crbi"]
radius = 12.0

[node name="solarpanelminigame" type="CanvasLayer"]
script = ExtResource("1_743iq")

[node name="SolarGame" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="current_question" type="Label" parent="SolarGame"]
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -0.215625
anchor_top = 1.09167
anchor_right = -0.18073
anchor_bottom = 1.09167
offset_left = 161.625
offset_top = 75.3333
offset_right = 239.229
offset_bottom = 100.333
scale = Vector2(1.5, 1.5)
text = "28 x 22 = ?"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="player_input" type="Label" parent="SolarGame"]
modulate = Color(0.398886, 0.271711, 0.740012, 1)
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -0.265626
anchor_top = 0.00416679
anchor_right = 1.45937
anchor_bottom = 0.00416698
offset_left = 337.625
offset_top = 78.8333
offset_right = 362.625
offset_bottom = 103.833
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="input_box" type="Sprite2D" parent="SolarGame"]
z_index = 2
position = Vector2(373, 92.5)
scale = Vector2(1.02083, 1.6875)
texture = ExtResource("1_1hof7")

[node name="waiting_time" type="Label" parent="SolarGame"]
modulate = Color(1, 0.2, 0.2, 1)
z_index = 3
layout_mode = 1
anchors_preset = -1
anchor_left = -0.280209
anchor_top = -2.98333
anchor_right = -0.280209
anchor_bottom = -2.98333
offset_left = 221.208
offset_top = 151.333
offset_right = 246.208
offset_bottom = 176.333
scale = Vector2(2, 2)
text = "25"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="SolarGame"]

[node name="PanelContainer" type="PanelContainer" parent="SolarGame"]
z_index = -1
layout_mode = 0
offset_left = 5.0
offset_top = 9.0
offset_right = 476.0
offset_bottom = 265.0
theme_override_styles/panel = SubResource("StyleBoxTexture_t440s")
metadata/_edit_use_anchors_ = true

[node name="ground" type="TileMapLayer" parent="SolarGame/PanelContainer"]
modulate = Color(0.641934, 0.641934, 0.641934, 1)
z_index = -4
position = Vector2(-5, -8)
tile_map_data = PackedByteArray("AAADAAIAAQACAAEAAAAEAAIAAQACAAEAAAAEAAMAAQACAAEAAAAFAAMAAQACAAEAAAAGAAQAAQACAAEAAAAHAAUAAQACAAEAAAAIAAYAAQACAAEAAAAJAAYAAQACAAEAAAAJAAcAAQACAAEAAAAKAAcAAQACAAEAAAALAAcAAQACAAEAAAALAAgAAQACAAEAAAAMAAgAAQACAAEAAAAMAAkAAQACAAEAAAANAAkAAQACAAEAAAAOAAkAAQACAAEAAAAOAAoAAQACAAEAAAAPAAoAAQACAAEAAAAQAAoAAQACAAEAAAAQAAsAAQACAAEAAAARAAsAAQACAAEAAAASAAsAAQACAAEAAAATAAsAAQACAAEAAAATAAwAAQACAAEAAAAUAAwAAQACAAEAAAAVAAwAAQACAAEAAAAVAA0AAQACAAEAAAAWAA0AAQACAAEAAAADAAMAAQACAAEAAAADAAQAAQACAAEAAAADAAUAAQACAAEAAAADAAYAAQACAAEAAAADAAcAAQACAAEAAAADAAgAAQACAAEAAAADAAkAAQACAAEAAAADAAoAAQACAAEAAAADAAsAAQACAAEAAAADAAwAAQACAAEAAAADAA0AAQACAAEAAAADAA4AAQACAAEAAAAEAA4AAQACAAEAAAAFAA4AAQACAAEAAAAGAA4AAQACAAEAAAAHAA4AAQACAAEAAAAIAA4AAQACAAEAAAAJAA4AAQACAAEAAAAKAA4AAQACAAEAAAALAA4AAQACAAEAAAAMAA4AAQACAAEAAAANAA4AAQACAAEAAAAOAA4AAQACAAEAAAAPAA4AAQACAAEAAAAQAA4AAQACAAEAAAARAA4AAQACAAEAAAASAA4AAQACAAEAAAATAA4AAQACAAEAAAAUAA4AAQACAAEAAAAVAA4AAQACAAEAAAAWAA4AAQACAAEAAAAXAA4AAQACAAEAAAAYAA4AAQACAAEAAAAZAA4AAQACAAEAAAAaAA4AAQACAAEAAAAaAA0AAQACAAEAAAAaAAwAAQACAAEAAAAaAAsAAQACAAEAAAAaAAoAAQACAAEAAAAaAAkAAQACAAEAAAAaAAgAAQACAAEAAAAaAAcAAQACAAEAAAAaAAYAAQACAAEAAAAaAAUAAQACAAEAAAAaAAQAAQACAAEAAAAaAAMAAQACAAEAAAAaAAIAAQACAAEAAAAZAAIAAQACAAEAAAAYAAIAAQACAAEAAAAXAAIAAQACAAEAAAAWAAIAAQACAAEAAAAVAAIAAQACAAEAAAAUAAIAAQACAAEAAAATAAIAAQACAAEAAAASAAIAAQACAAEAAAARAAIAAQACAAEAAAAQAAIAAQACAAEAAAAPAAIAAQACAAEAAAAOAAIAAQACAAEAAAANAAIAAQACAAEAAAAMAAIAAQACAAEAAAALAAIAAQACAAEAAAAKAAIAAQACAAEAAAAJAAIAAQACAAEAAAAIAAIAAQACAAEAAAAHAAIAAQACAAEAAAAGAAIAAQACAAEAAAAFAAIAAQACAAEAAAAGAAMAAQACAAEAAAAHAAMAAQACAAEAAAAIAAMAAQACAAEAAAAHAAQAAQACAAEAAAAIAAQAAQACAAEAAAAIAAUAAQACAAEAAAAJAAQAAQACAAEAAAAJAAMAAQACAAEAAAAJAAUAAQACAAEAAAAKAAYAAQACAAEAAAAKAAUAAQACAAEAAAAKAAQAAQACAAEAAAAKAAMAAQACAAEAAAALAAMAAQACAAEAAAALAAQAAQACAAEAAAALAAUAAQACAAEAAAALAAYAAQACAAEAAAAMAAYAAQACAAEAAAAMAAUAAQACAAEAAAAMAAQAAQACAAEAAAAMAAMAAQACAAEAAAAMAAcAAQACAAEAAAANAAcAAQACAAEAAAANAAYAAQACAAEAAAANAAUAAQACAAEAAAANAAQAAQACAAEAAAANAAMAAQACAAEAAAAOAAUAAQACAAEAAAAOAAYAAQACAAEAAAAOAAcAAQACAAEAAAAOAAgAAQACAAEAAAAPAAgAAQACAAEAAAANAAgAAQACAAEAAAAOAAQAAQACAAEAAAAOAAMAAQACAAEAAAAPAAMAAQACAAEAAAAPAAQAAQACAAEAAAAPAAUAAQACAAEAAAAPAAYAAQACAAEAAAAPAAcAAQACAAEAAAAQAAkAAQACAAEAAAAQAAgAAQACAAEAAAAQAAcAAQACAAEAAAAQAAYAAQACAAEAAAAQAAUAAQACAAEAAAAQAAQAAQACAAEAAAAQAAMAAQACAAEAAAARAAMAAQACAAEAAAARAAQAAQACAAEAAAARAAUAAQACAAEAAAARAAYAAQACAAEAAAARAAcAAQACAAEAAAARAAgAAQACAAEAAAARAAkAAQACAAEAAAARAAoAAQACAAEAAAASAAoAAQACAAEAAAASAAkAAQACAAEAAAASAAgAAQACAAEAAAASAAcAAQACAAEAAAASAAYAAQACAAEAAAASAAUAAQACAAEAAAASAAQAAQACAAEAAAASAAMAAQACAAEAAAATAAMAAQACAAEAAAATAAQAAQACAAEAAAATAAUAAQACAAEAAAATAAYAAQACAAEAAAATAAcAAQACAAEAAAATAAgAAQACAAEAAAATAAkAAQACAAEAAAAUAAkAAQACAAEAAAAUAAoAAQACAAEAAAATAAoAAQACAAEAAAAUAAsAAQACAAEAAAAVAAsAAQACAAEAAAAWAAsAAQACAAEAAAAXAAsAAQACAAEAAAAXAAwAAQACAAEAAAAYAAwAAQACAAEAAAAXAA0AAQACAAEAAAAWAAwAAQACAAEAAAAYAA0AAQACAAEAAAAZAA0AAQACAAEAAAAZAAwAAQACAAEAAAAZAAsAAQACAAEAAAAZAAoAAQACAAEAAAAZAAkAAQACAAEAAAAZAAgAAQACAAEAAAAZAAcAAQACAAEAAAAZAAYAAQACAAEAAAAZAAUAAQACAAEAAAAZAAQAAQACAAEAAAAZAAMAAQACAAEAAAAYAAMAAQACAAEAAAAYAAQAAQACAAEAAAAYAAUAAQACAAEAAAAYAAYAAQACAAEAAAAYAAcAAQACAAEAAAAYAAgAAQACAAEAAAAYAAkAAQACAAEAAAAYAAoAAQACAAEAAAAYAAsAAQACAAEAAAAXAAoAAQACAAEAAAAXAAkAAQACAAEAAAAXAAgAAQACAAEAAAAXAAcAAQACAAEAAAAXAAYAAQACAAEAAAAXAAUAAQACAAEAAAAXAAQAAQACAAEAAAAXAAMAAQACAAEAAAAWAAMAAQACAAEAAAAWAAQAAQACAAEAAAAWAAUAAQACAAEAAAAWAAYAAQACAAEAAAAWAAcAAQACAAEAAAAWAAgAAQACAAEAAAAWAAkAAQACAAEAAAAWAAoAAQACAAEAAAAVAAQAAQACAAEAAAAVAAMAAQACAAEAAAAVAAUAAQACAAEAAAAVAAYAAQACAAEAAAAVAAcAAQACAAEAAAAVAAgAAQACAAEAAAAVAAkAAQACAAEAAAAVAAoAAQACAAEAAAAUAAcAAQACAAEAAAAUAAYAAQACAAEAAAAUAAUAAQACAAEAAAAUAAQAAQACAAEAAAAUAAMAAQACAAEAAAAUAAgAAQACAAEAAAAUAA0AAQACAAEAAAATAA0AAQACAAEAAAASAA0AAQACAAEAAAASAAwAAQACAAEAAAARAA0AAQACAAEAAAARAAwAAQACAAEAAAAQAAwAAQACAAEAAAAQAA0AAQACAAEAAAAPAA0AAQACAAEAAAAPAAwAAQACAAEAAAAPAAsAAQACAAEAAAAOAAwAAQACAAEAAAAOAA0AAQACAAEAAAAOAAsAAQACAAEAAAANAAoAAQACAAEAAAANAAsAAQACAAEAAAANAAwAAQACAAEAAAANAA0AAQACAAEAAAAMAAoAAQACAAEAAAAMAAsAAQACAAEAAAAMAAwAAQACAAEAAAAMAA0AAQACAAEAAAALAA0AAQACAAEAAAALAAwAAQACAAEAAAALAAsAAQACAAEAAAALAAoAAQACAAEAAAALAAkAAQACAAEAAAAKAA0AAQACAAEAAAAKAAwAAQACAAEAAAAKAAsAAQACAAEAAAAKAAoAAQACAAEAAAAKAAkAAQACAAEAAAAKAAgAAQACAAEAAAAJAAgAAQACAAEAAAAJAAkAAQACAAEAAAAJAAoAAQACAAEAAAAJAAsAAQACAAEAAAAJAAwAAQACAAEAAAAJAA0AAQACAAEAAAAIAA0AAQACAAEAAAAIAAwAAQACAAEAAAAIAAsAAQACAAEAAAAIAAoAAQACAAEAAAAIAAkAAQACAAEAAAAIAAgAAQACAAEAAAAIAAcAAQACAAEAAAAHAAYAAQACAAEAAAAHAAcAAQACAAEAAAAHAAgAAQACAAEAAAAHAAkAAQACAAEAAAAHAAoAAQACAAEAAAAHAAsAAQACAAEAAAAHAAwAAQACAAEAAAAHAA0AAQACAAEAAAAGAA0AAQACAAEAAAAGAAwAAQACAAEAAAAGAAsAAQACAAEAAAAGAAoAAQACAAEAAAAGAAkAAQACAAEAAAAGAAgAAQACAAEAAAAGAAcAAQACAAEAAAAGAAYAAQACAAEAAAAGAAUAAQACAAEAAAAFAAQAAQACAAEAAAAFAAUAAQACAAEAAAAFAAYAAQACAAEAAAAFAAcAAQACAAEAAAAFAAwAAQACAAEAAAAFAA0AAQACAAEAAAAFAAsAAQACAAEAAAAFAAoAAQACAAEAAAAFAAkAAQACAAEAAAAFAAgAAQACAAEAAAAEAAwAAQACAAEAAAAEAA0AAQACAAEAAAAEAAsAAQACAAEAAAAEAAoAAQACAAEAAAAEAAkAAQACAAEAAAAEAAgAAQACAAEAAAAEAAcAAQACAAEAAAAEAAYAAQACAAEAAAAEAAUAAQACAAEAAAAEAAQAAQACAAEAAAABAA0AAQAEAAMAAAABAA4AAQAEAAIAAAACAA0AAQAFAAMAAAACAA4AAQAFAAIAAAABAAsAAQAEAAMAAAABAAwAAQAEAAIAAAACAAsAAQAFAAMAAAACAAwAAQAFAAIAAAABAAkAAQAEAAMAAAABAAoAAQAEAAIAAAACAAkAAQAFAAMAAAACAAoAAQAFAAIAAAABAAcAAQAEAAMAAAABAAgAAQAEAAIAAAACAAcAAQAFAAMAAAACAAgAAQAFAAIAAAABAAUAAQAEAAMAAAABAAYAAQAEAAIAAAACAAUAAQAFAAMAAAACAAYAAQAFAAIAAAABAAMAAQAEAAMAAAABAAQAAQAEAAIAAAACAAMAAQAFAAMAAAACAAQAAQAFAAIAAAABAAIAAQAEAAIAAAACAAEAAQAEAAIAAAACAAIAAQAFAAIAAAADAAEAAQAFAAIAAAAEAAEAAQAEAAIAAAAFAAEAAQAFAAIAAAAGAAEAAQAEAAIAAAAHAAEAAQAFAAIAAAAIAAEAAQAEAAIAAAAJAAEAAQAFAAIAAAAKAAEAAQAEAAIAAAALAAEAAQAFAAIAAAAMAAEAAQAEAAIAAAANAAEAAQAFAAIAAAAOAAEAAQAEAAIAAAAPAAEAAQAFAAIAAAAQAAEAAQAEAAIAAAARAAEAAQAFAAIAAAASAAEAAQAEAAIAAAATAAEAAQAFAAIAAAAUAAEAAQAEAAIAAAAVAAEAAQAFAAIAAAAWAAEAAQAEAAIAAAAXAAEAAQAFAAIAAAAYAAEAAQAEAAIAAAAZAAEAAQAFAAIAAAAaAAEAAQAEAAIAAAAbAAEAAQAFAAIAAAAbAAIAAQAEAAIAAAAcAAIAAQAFAAIAAAAbAAMAAQAEAAMAAAAbAAQAAQAEAAIAAAAcAAMAAQAFAAMAAAAcAAQAAQAFAAIAAAAbAAUAAQAEAAMAAAAbAAYAAQAEAAIAAAAcAAUAAQAFAAMAAAAcAAYAAQAFAAIAAAAbAAcAAQAEAAMAAAAbAAgAAQAEAAIAAAAcAAcAAQAFAAMAAAAcAAgAAQAFAAIAAAAbAAkAAQAEAAMAAAAbAAoAAQAEAAIAAAAcAAkAAQAFAAMAAAAcAAoAAQAFAAIAAAAbAAsAAQAEAAMAAAAbAAwAAQAEAAIAAAAcAAsAAQAFAAMAAAAcAAwAAQAFAAIAAAAbAA0AAQAEAAMAAAAbAA4AAQAEAAIAAAAcAA0AAQAFAAMAAAAcAA4AAQAFAAIAAAACAA8AAQAEAAIAAAADAA8AAQAFAAIAAAAEAA8AAQAEAAIAAAAFAA8AAQAFAAIAAAAGAA8AAQAEAAIAAAAHAA8AAQAFAAIAAAAIAA8AAQAEAAIAAAAJAA8AAQAFAAIAAAAKAA8AAQAEAAIAAAALAA8AAQAFAAIAAAAMAA8AAQAEAAIAAAANAA8AAQAFAAIAAAAOAA8AAQAEAAIAAAAPAA8AAQAFAAIAAAAQAA8AAQAEAAIAAAARAA8AAQAFAAIAAAASAA8AAQAEAAIAAAATAA8AAQAFAAIAAAAUAA8AAQAEAAIAAAAVAA8AAQAFAAIAAAAWAA8AAQAEAAIAAAAXAA8AAQAFAAIAAAAYAA8AAQAEAAIAAAAZAA8AAQAFAAIAAAAaAA8AAQAEAAIAAAAbAA8AAQAFAAIAAAAPAAkAAQACAAEAAAA=")
tile_set = SubResource("TileSet_21oty")

[node name="start_solar" type="Sprite2D" parent="SolarGame/PanelContainer"]
position = Vector2(88, 61)
scale = Vector2(4, 4)
texture = ExtResource("3_wgwls")
hframes = 6
vframes = 2
frame = 1

[node name="RightArrow" type="Sprite2D" parent="SolarGame/PanelContainer"]
modulate = Color(0.817521, 0.817521, 0.817521, 1)
position = Vector2(90, 130)
rotation = 1.5708
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_7yitv")

[node name="end_solar" type="Sprite2D" parent="SolarGame/PanelContainer"]
position = Vector2(89, 194)
scale = Vector2(4, 4)
texture = ExtResource("3_wgwls")
hframes = 6
vframes = 2
frame = 2

[node name="fail_1" type="Sprite2D" parent="SolarGame/PanelContainer"]
self_modulate = Color(0.42, 0.42, 0.42, 1)
position = Vector2(339, 50)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_meudt")

[node name="fail_2" type="Sprite2D" parent="SolarGame/PanelContainer"]
self_modulate = Color(0.42, 0.42, 0.42, 1)
position = Vector2(369, 50)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_meudt")

[node name="fail_3" type="Sprite2D" parent="SolarGame/PanelContainer"]
self_modulate = Color(0.42, 0.42, 0.42, 1)
position = Vector2(399, 50)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_meudt")

[node name="KeyCooldown" type="Timer" parent="SolarGame/PanelContainer"]

[node name="one_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(335, 122)

[node name="1" type="Sprite2D" parent="SolarGame/PanelContainer/one_key"]
modulate = Color(0.776691, 0.809397, 0.963882, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_jpld3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/one_key"]
position = Vector2(0, -2)
scale = Vector2(0.85, 0.85)
shape = SubResource("RectangleShape2D_5eq4a")

[node name="two_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(368, 122)

[node name="2" type="Sprite2D" parent="SolarGame/PanelContainer/two_key"]
modulate = Color(0.776691, 0.809397, 0.963882, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_t0gal")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/two_key"]
position = Vector2(0, -2)
scale = Vector2(0.85, 0.85)
shape = SubResource("RectangleShape2D_5eq4a")

[node name="three_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(401, 122)

[node name="3" type="Sprite2D" parent="SolarGame/PanelContainer/three_key"]
modulate = Color(0.776691, 0.809397, 0.963882, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("8_a4try")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/three_key"]
position = Vector2(0, -2)
scale = Vector2(0.85, 0.85)
shape = SubResource("RectangleShape2D_5eq4a")

[node name="four_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(335, 153)

[node name="4" type="Sprite2D" parent="SolarGame/PanelContainer/four_key"]
modulate = Color(0.776691, 0.809397, 0.963882, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("9_503rr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/four_key"]
position = Vector2(0, -2)
scale = Vector2(0.85, 0.85)
shape = SubResource("RectangleShape2D_5eq4a")

[node name="five_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(368, 153)

[node name="5" type="Sprite2D" parent="SolarGame/PanelContainer/five_key"]
modulate = Color(0.776691, 0.809397, 0.963882, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("10_ekjin")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/five_key"]
position = Vector2(0, -2)
scale = Vector2(0.85, 0.85)
shape = SubResource("RectangleShape2D_5eq4a")

[node name="six_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(401, 153)

[node name="6" type="Sprite2D" parent="SolarGame/PanelContainer/six_key"]
modulate = Color(0.776691, 0.809397, 0.963882, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("11_yrh4q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/six_key"]
position = Vector2(0, -2)
scale = Vector2(0.85, 0.85)
shape = SubResource("RectangleShape2D_5eq4a")

[node name="seven_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(335, 183)

[node name="7" type="Sprite2D" parent="SolarGame/PanelContainer/seven_key"]
modulate = Color(0.776691, 0.809397, 0.963882, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("12_3tiyt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/seven_key"]
position = Vector2(0, -2)
scale = Vector2(0.85, 0.85)
shape = SubResource("RectangleShape2D_5eq4a")

[node name="eight_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(368, 183)

[node name="8" type="Sprite2D" parent="SolarGame/PanelContainer/eight_key"]
modulate = Color(0.776691, 0.809397, 0.963882, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("13_hxfnc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/eight_key"]
position = Vector2(0, -2)
scale = Vector2(0.85, 0.85)
shape = SubResource("RectangleShape2D_5eq4a")

[node name="nine_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(401, 183)

[node name="9" type="Sprite2D" parent="SolarGame/PanelContainer/nine_key"]
modulate = Color(0.776691, 0.809397, 0.963882, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("14_xwasy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/nine_key"]
position = Vector2(0, -2)
scale = Vector2(0.85, 0.85)
shape = SubResource("RectangleShape2D_5eq4a")

[node name="zero_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(368, 214)

[node name="0" type="Sprite2D" parent="SolarGame/PanelContainer/zero_key"]
modulate = Color(0.776691, 0.809397, 0.963882, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("15_1t7v2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/zero_key"]
position = Vector2(0, -2)
scale = Vector2(0.85, 0.85)
shape = SubResource("RectangleShape2D_5eq4a")

[node name="enter_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(401, 216)

[node name="enter" type="Sprite2D" parent="SolarGame/PanelContainer/enter_key"]
rotation = 1.5708
scale = Vector2(0.6, 0.6)
texture = ExtResource("16_jis1j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/enter_key"]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_5crbi")

[node name="clear_key" type="Area2D" parent="SolarGame/PanelContainer"]
position = Vector2(334, 217)

[node name="clear" type="Sprite2D" parent="SolarGame/PanelContainer/clear_key"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("17_cbn4a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolarGame/PanelContainer/clear_key"]
position = Vector2(-5.72205e-06, -1.00001)
shape = SubResource("CircleShape2D_5crbi")

[connection signal="timeout" from="SolarGame/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SolarGame/PanelContainer/KeyCooldown" to="." method="_on_key_cooldown_timeout"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/one_key" to="." method="_on_one_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/one_key" to="." method="_on_one_key_mouse_exited"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/two_key" to="." method="_on_two_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/two_key" to="." method="_on_two_key_mouse_exited"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/three_key" to="." method="_on_three_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/three_key" to="." method="_on_three_key_mouse_exited"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/four_key" to="." method="_on_four_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/four_key" to="." method="_on_four_key_mouse_exited"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/five_key" to="." method="_on_five_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/five_key" to="." method="_on_five_key_mouse_exited"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/six_key" to="." method="_on_six_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/six_key" to="." method="_on_six_key_mouse_exited"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/seven_key" to="." method="_on_seven_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/seven_key" to="." method="_on_seven_key_mouse_exited"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/eight_key" to="." method="_on_eight_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/eight_key" to="." method="_on_eight_key_mouse_exited"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/nine_key" to="." method="_on_nine_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/nine_key" to="." method="_on_nine_key_mouse_exited"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/zero_key" to="." method="_on_zero_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/zero_key" to="." method="_on_zero_key_mouse_exited"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/enter_key" to="." method="_on_enter_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/enter_key" to="." method="_on_enter_key_mouse_exited"]
[connection signal="mouse_entered" from="SolarGame/PanelContainer/clear_key" to="." method="_on_clear_key_mouse_entered"]
[connection signal="mouse_exited" from="SolarGame/PanelContainer/clear_key" to="." method="_on_clear_key_mouse_exited"]
